Add calculation for solar export

--- a/tariffEV.cfg
+++ b/tariffEV.cfg
@@ -1,6 +1,8 @@
 {
   "daily": 108.9,
   "pricing": [21.344, 37.171, 0, 8, 0],
+  "solarmeter": "B1",
+  "feedin": 60,
   "workday" : [
     // Tariff
     // 1 : off-peak
