--- a/tariffGloBird.cfg
+++ b/tariffGloBird.cfg
@@ -1,6 +1,8 @@
 {
-  "daily": 96.8,
-  "pricing": [13.42, 28.71, 0, 0, 0],
+  "daily": 103.8,
+  "pricing": [17.60, 42.35, 0, 0, 0],
+  "solarmeter": "B1",
+  "feedin": 60,
   "workday" : [
     // Tariff
     // 1 : off-peak
