--- a/tariffOVO.cfg
+++ b/tariffOVO.cfg
@@ -1,6 +1,8 @@
 {
   "daily": 77,
   "pricing": [24.97, 38.39, 0 , 8, 0],
+  "solarmeter": "B1",
+  "feedin": 60,
   "workday" : [
     // Tariff
     // 1 : off-peak
