--- a/tariffPeakOffpeak.cfg
+++ b/tariffPeakOffpeak.cfg
@@ -1,6 +1,8 @@
 {
   "daily": 99,
   "pricing": [13.2, 24.31, 0, 0, 0],
+  "solarmeter": "B1",
+  "feedin": 60,
   "workday" : [
     // Tariff
     // 1 : off-peak
